--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -382,7 +382,6 @@ h4 {
   background: var(--white-color);
 }
 .body-container .body-content .slide-list {
-  overflow: hidden;
   margin-bottom: calc(var(--size-100) * 3);
 }
 .body-container .body-content .slide-list .slide-item .about-top {
@@ -485,6 +484,10 @@ h4 {
   bottom: -3.2rem;
   right: 0;
   width: 40%;
+  pointer-events: none;
+}
+.body-container .body-content .slide-list .slide-item .responsive-speaker {
+  display: none;
 }
 .body-container .body-content .middle-content {
   display: flex;
@@ -610,6 +613,9 @@ h4 {
   width: 60rem;
   height: 100rem;
 }
+.body-container .body-content .middle-content .middle-bg .bottom-content .chair-responsive {
+  display: none;
+}
 .body-container .body-content .middle-content .middle-bg .bottom-content .plus-icon {
   position: absolute;
   right: 10%;
@@ -629,7 +635,7 @@ h4 {
 
 .bottom-container {
   height: 100%;
-  padding-top: 60rem;
+  padding-top: 49rem;
   background: rgb(176, 175, 173);
 }
 .bottom-container .img-bg {
@@ -649,6 +655,15 @@ h4 {
   transform: translate(-50%, -50%);
   margin-top: -5rem;
   color: var(--white-color);
+}
+.bottom-container .img-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: linear-gradient(to bottom, #b0afad, transparent);
 }
 .bottom-container .footer-container {
   background: rgb(203, 204, 208);
@@ -679,6 +694,10 @@ h4 {
 .bottom-container .footer-container .footer-content .footer-top {
   padding: var(--size-70) var(--size-80);
   position: relative;
+}
+.bottom-container .footer-container .footer-content .footer-top .form-group {
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 .bottom-container .footer-container .footer-content .footer-top .img-bg {
   position: absolute;
@@ -761,9 +780,13 @@ h4 {
 .bottom-container .footer-container .footer-content .footer-info .footer-main-content {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 .bottom-container .footer-container .footer-content .footer-info .footer-main-content .footer-info-content {
   display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 .bottom-container .footer-container .footer-content .footer-info .footer-main-content .footer-info-content .footer-column {
   min-width: var(--size-210);
@@ -780,6 +803,9 @@ h4 {
 .bottom-container .footer-container .footer-content .footer-info .footer-main-content .footer-info-content .footer-column p.text-underline {
   text-decoration: underline;
 }
+.bottom-container .footer-container .footer-content .footer-info .footer-main-content .footer-social-content {
+  gap: 1rem;
+}
 .bottom-container .footer-container .footer-content .footer-info .footer-main-content .footer-social-content .social-icon {
   width: var(--size-40);
   height: var(--size-40);
@@ -792,7 +818,6 @@ h4 {
   justify-content: center;
   cursor: pointer;
   user-select: none;
-  margin-left: 1rem;
 }
 .bottom-container .footer-container .footer-content .footer-info .footer-design-info {
   margin-top: var(--size-100);
@@ -860,11 +885,8 @@ h4 {
   .banner-container .loading-container {
     width: calc(60% - var(--size-100) * 3);
   }
-  .body-container .body-content {
-    width: calc(100% - var(--size-35));
-  }
   .body-container .body-content .slide-list {
-    margin-bottom: calc(var(--size-100) * 3);
+    margin-bottom: calc(var(--size-40) * 3);
   }
   .body-container .body-content .slide-list .slide-item .about-top {
     padding: var(--size-50) var(--size-35) var(--size-50) var(--size-35);
@@ -882,150 +904,125 @@ h4 {
   .body-container .body-content .slide-list .slide-item .about-info .right-info {
     width: 58.8%;
   }
-  .body-container .body-content .middle-content {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
+  .body-container .body-content .slide-list .slide-item .about-info .right-info .speaker-img {
+    display: none;
   }
-  .body-container .body-content .middle-content p {
-    line-height: 2;
+  .body-container .body-content .slide-list .slide-item .about-info .right-info p {
+    margin-right: 0;
   }
-  .body-container .body-content .middle-content p .text-underline {
-    text-decoration: underline;
+  .body-container .body-content .slide-list .slide-item .responsive-speaker {
+    display: block;
+    width: 400px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-top: -90px;
   }
   .body-container .body-content .middle-content .left-content {
     width: 55%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    z-index: 1;
   }
   .body-container .body-content .middle-content .left-content p {
-    padding: 8.75rem 37%;
-    padding-left: var(--size-210);
-    margin: 0;
-  }
-  .body-container .body-content .middle-content .left-content .content-img {
-    width: 80.49%;
-    height: 0;
-    position: relative;
-    padding-bottom: 61.17%;
-  }
-  .body-container .body-content .middle-content .left-content .content-img img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center 100%;
+    padding: 6.75rem;
+    padding-left: var(--size-100);
   }
   .body-container .body-content .middle-content .right-content {
     width: 45%;
     margin-top: -12.72%;
-    z-index: 1;
-  }
-  .body-container .body-content .middle-content .right-content .content-img {
-    width: 100%;
-    height: 0;
-    position: relative;
-    padding-bottom: 113.19%;
-  }
-  .body-container .body-content .middle-content .right-content .content-img img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
   .body-container .body-content .middle-content .right-content .content-title-img {
     width: var(--size-150);
-    margin-bottom: 2.3rem;
+    margin-bottom: 0.3rem;
   }
   .body-container .body-content .middle-content .right-content .translate-bottom {
-    width: 46%;
-    transform: translateY(12.5rem);
-    margin: auto;
+    width: 68%;
+    transform: translateY(5.5rem);
   }
   .body-container .body-content .middle-content .middle-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: inherit;
-    height: 100%;
-    height: calc(100% + 60rem);
-    box-sizing: border-box;
-    background: url("/assets/img/middle-bg.jpg");
-    background-size: cover;
-    background-position: center;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    overflow: hidden;
+    height: calc(100% + 49rem);
   }
   .body-container .body-content .middle-content .middle-bg .bottom-content {
-    margin-left: var(--size-210);
+    margin-left: var(--size-100);
   }
   .body-container .body-content .middle-content .middle-bg .bottom-content h2 {
-    font-family: var(--third-font);
-    font-size: 12rem;
-    line-height: 1;
-    font-weight: var(--font-medium);
-    margin: 0;
-    position: relative;
-    width: max-content;
-  }
-  .body-container .body-content .middle-content .middle-bg .bottom-content h2:first-of-type::after {
-    content: "";
-    position: absolute;
-    right: -120px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: var(--size-120);
-    height: 1rem;
-    background: var(--first-color);
+    font-size: 7rem;
   }
   .body-container .body-content .middle-content .middle-bg .bottom-content h2:last-of-type {
-    margin-bottom: var(--size-100);
+    margin-bottom: var(--size-50);
   }
   .body-container .body-content .middle-content .middle-bg .bottom-content p {
-    width: 19%;
+    width: 23%;
   }
   .body-container .body-content .middle-content .middle-bg .bottom-content p:last-of-type {
-    margin-top: var(--size-80);
-    margin-bottom: var(--size-100);
+    margin-top: var(--size-50);
+    margin-bottom: var(--size-70);
   }
   .body-container .body-content .middle-content .middle-bg .bottom-content .chair-img {
-    position: absolute;
-    top: calc(100% - 65rem);
+    top: calc(100% - 51rem);
     left: calc(50% + 10rem);
-    transform: translateX(-50%);
-    width: 60rem;
-    height: 100rem;
+    width: 51rem;
+    height: 86rem;
   }
-  .body-container .body-content .middle-content .middle-bg .bottom-content .plus-icon {
-    position: absolute;
-    right: 10%;
-    bottom: var(--size-100);
-    width: var(--size-40);
-    height: var(--size-40);
-    border: 1px solid #ddd;
-    border-radius: 50%;
-    font-size: 2.5rem;
-    font-weight: lighter;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    user-select: none;
+}
+@media (max-width: 768px) {
+  .body-container .body-content .slide-list {
+    margin-bottom: calc(var(--size-50) * 3);
+  }
+  .body-container .body-content .slide-list .slide-item .about-info {
+    flex-direction: column;
+    padding: 0 var(--size-35);
+  }
+  .body-container .body-content .slide-list .slide-item .about-info .left-info {
+    width: 100%;
+    margin-bottom: var(--size-50);
+  }
+  .body-container .body-content .slide-list .slide-item .about-info .right-info {
+    width: 100%;
+  }
+  .body-container .body-content .slide-list .slide-item .responsive-speaker {
+    display: block;
+    margin: 0 auto;
+  }
+  .body-container .body-content .middle-content .middle-bg {
+    height: calc(100% + 46rem);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content {
+    margin-left: var(--size-35);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content p {
+    width: 30%;
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content .chair-img {
+    top: calc(100% - 39rem);
+    left: 70%;
+    width: 36rem;
+    height: 52rem;
+  }
+  .body-container .body-content .middle-content .left-content {
+    width: 51%;
+  }
+  .body-container .body-content .middle-content .left-content p {
+    padding: var(--size-35);
+  }
+  .body-container .body-content .middle-content .left-content .content-img {
+    width: 100%;
+    height: 100%;
+  }
+  .body-container .body-content .middle-content .right-content {
+    margin-top: -23.72%;
+  }
+  .body-container .body-content .middle-content .right-content .translate-bottom {
+    width: calc(100% - var(--size-70));
+    transform: translateY(1.5rem);
   }
 }
 @media (max-width: 550px) {
+  :root {
+    --size-35: 20px;
+  }
   .loading-icon {
     display: none;
+  }
+  .banner-container .header .logo-left {
+    padding-left: 5rem;
   }
   .banner-container .header .header-link-item {
     display: none;
@@ -1041,6 +1038,89 @@ h4 {
   }
   .banner-container .slide-list .slide-item .item-info .article-content br {
     display: none;
+  }
+  .body-container .body-content .slide-list {
+    margin-bottom: 0;
+  }
+  .body-container .body-content .slide-list .slide-item .about-info .left-info {
+    margin-bottom: var(--size-40);
+  }
+  .body-container .body-content .slide-list .slide-item .about-info .right-info h3 {
+    font-size: 2.75rem;
+  }
+  .body-container .body-content .slide-list .slide-item .about-info .right-info h3 span::after {
+    bottom: 0.8rem;
+  }
+  .body-container .body-content .slide-list .slide-item .about-info .right-info h3:last-of-type {
+    margin-bottom: var(--size-40);
+  }
+  .body-container .body-content .middle-content {
+    flex-direction: column-reverse;
+    padding: var(--size-35);
+  }
+  .body-container .body-content .middle-content .middle-bg {
+    position: static;
+    height: auto;
+    margin: 0 calc(var(--size-35) * -1) calc(var(--size-35) * -1);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content {
+    margin: var(--size-35);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content h2 {
+    font-size: 5rem;
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content h2:last-of-type {
+    margin-bottom: var(--size-40);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content p {
+    width: 100%;
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content p:last-of-type {
+    margin-top: var(--size-40);
+    margin-bottom: var(--size-90);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content .chair-img {
+    display: none;
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content .chair-responsive {
+    display: block;
+    position: static;
+    margin: -11rem 0 -15rem;
+    height: auto;
+    transform: unset;
+  }
+  .body-container .body-content .middle-content .left-content {
+    width: 100%;
+    flex-direction: column-reverse;
+    margin-bottom: var(--size-40);
+  }
+  .body-container .body-content .middle-content .left-content p {
+    padding: var(--size-35) 0;
+  }
+  .body-container .body-content .middle-content .right-content {
+    width: 100%;
+    margin-top: 0;
+  }
+  .body-container .body-content .middle-content .right-content .translate-bottom {
+    width: 100%;
+  }
+  .bottom-container {
+    padding-top: 0;
+  }
+  .bottom-container .img-bg img {
+    height: 30rem;
+  }
+  .bottom-container .img-bg::after {
+    display: none;
+  }
+  .bottom-container .footer-container .footer-content::after {
+    width: calc(var(--size-35) * 1);
+  }
+  .bottom-container .footer-container .footer-content .footer-top {
+    padding: var(--size-50) var(--size-35);
+  }
+  .bottom-container .footer-container .footer-content .footer-info {
+    padding: var(--size-50) var(--size-35);
   }
 }
 @media (max-width: 400px) {
@@ -1060,6 +1140,14 @@ h4 {
     height: auto;
     margin-left: var(--size-35);
     margin-top: var(--size-35);
+  }
+  .body-container .body-content .middle-content .middle-bg .bottom-content .chair-responsive {
+    margin: -11rem 0 -11rem;
+  }
+}
+@media (min-width: 1500px) {
+  .bottom-container .img-bg img {
+    height: 78rem;
   }
 }
 
