--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1187,6 +1187,7 @@ h4 {
                     margin-top: 0;
                     .translate-bottom {
                         width: 100%;
+                        transform: translateY(-0.5rem);
                     }
                 }
             }
